fix bag
